--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "index.js"
   ],
   "engines": {
-    "node": "^8 || ^10"
+    "node": ">=7.6.0"
   },
   "scripts": {
     "lint": "eslint --cache --fix index.js",
@@ -50,5 +50,8 @@
     "arrowParens": "always",
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "dependencies": {
+    "jest": "^24.8.0"
   }
 }
