chore: pin latest LTS for development

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "index.js"
   ],
   "engines": {
-    "node": "^8 || ^10"
+    "node": "12.14.0"
   },
   "scripts": {
     "lint": "eslint --cache --fix *.js",
@@ -35,5 +35,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-unicorn": "^15.0.1",
     "prettier": "^1.19.1"
+  },
+  "volta": {
+    "node": "12.14.0",
+    "yarn": "1.21.1"
   }
 }
